@@ -4,6 +4,7 @@ It's written in Java and aims to be run on any system (windows, linux or mac).
 This program runs with Java 1.6 or later
 
 Changelog in 1.3.2 :
+Added functionality : Redirecting standard output to RoFage.log 
 Added functionality : Dutch translation by Maikel Steneker
 Added functionality : Changing of the default Java icon
 Added functionality : Send an e-mail to the author
